--- a/camaracomercio/camara/template/vista_publica/convenios.html
+++ b/camaracomercio/camara/template/vista_publica/convenios.html
@@ -1,4 +1,5 @@
 {% extends "master.html" %}
+{% load static %}
 {% block title %}Convenios Públicos{% endblock %}
 {% block content %}
 <div class="container mt-5">
@@ -19,7 +20,7 @@
         <div class="col-md-4 mb-4">
             <div class="card shadow-sm h-100">
                 <div class="card-body text-center">
-                    <img src="{% static 'img/convenio_sanjose.png' %}" alt="San José" class="convenio-img">
+                    <img src="{% static 'img/clinicasanjose.png' %}" alt="San José" class="convenio-img">
                     <h5 class="card-title mt-2">Clínica Hospital San José</h5>
                     <p class="card-text">Puedes acceder a los servicios de Ginecología, Cirugía General, Urología y Cirugía Plástica, descuentos en: Emergencia, Hospitalización, Laboratorio, Servicio de Imagen y Consulta externa, que van desde el 15 al 20%, dependiendo del mismo.</p>
                 </div>
@@ -29,7 +30,7 @@
         <div class="col-md-4 mb-4">
             <div class="card shadow-sm h-100">
                 <div class="card-body text-center">
-                    <img src="{% static 'img/convenio_edes.png' %}" alt="Edes UTPL" class="convenio-img">
+                    <img src="{% static 'img/edes.png' %}" alt="Edes UTPL" class="convenio-img">
                     <h5 class="card-title mt-2">Edes UTPL</h5>
                     <p class="card-text">Gracias a nuestro convenio obtienes el 32% de descuento en las maestrías, así como el 25% en programas abiertos. Sé parte de una comunidad de aprendizaje innovadora y fortalece tus habilidades.</p>
                 </div>
@@ -39,7 +40,7 @@
         <div class="col-md-4 mb-4">
             <div class="card shadow-sm h-100">
                 <div class="card-body text-center">
-                    <img src="{% static 'img/convenio_jaramillo.png' %}" alt="Funeraria Jaramillo" class="convenio-img">
+                    <img src="{% static 'img/funerariajaramillo.png' %}" alt="Funeraria Jaramillo" class="convenio-img">
                     <h5 class="card-title mt-2">Funeraria Jaramillo</h5>
                     <p class="card-text">Puedes optar por los servicios de esta empresa lojana, con 50 años de experiencia en servicios exequiales, dedicada a servir con un trato humano y servicial a la familia en esos momentos difíciles.</p>
                 </div>
@@ -49,7 +50,7 @@
         <div class="col-md-4 mb-4">
             <div class="card shadow-sm h-100">
                 <div class="card-body text-center">
-                    <img src="{% static 'img/convenio_cuxibamba.png' %}" alt="Farmacias Cuxibamba" class="convenio-img">
+                    <img src="{% static 'img/farmaciaCuxi.png' %}" alt="Farmacias Cuxibamba" class="convenio-img">
                     <h5 class="card-title mt-2">Farmacias Cuxibamba</h5>
                     <p class="card-text">Siendo socio de la Cámara de Comercio de Loja, puedes acceder al 5% de descuento en todos los productos y líneas que mantiene Farmacias Cuxibamba, gracias a nuestro convenio.</p>
                 </div>
@@ -59,7 +60,7 @@
         <div class="col-md-4 mb-4">
             <div class="card shadow-sm h-100">
                 <div class="card-body text-center">
-                    <img src="{% static 'img/convenio_santaines.png' %}" alt="Hospital Santa Inés" class="convenio-img">
+                    <img src="{% static 'img/santaines.png' %}" alt="Hospital Santa Inés" class="convenio-img">
                     <h5 class="card-title mt-2">Hospital Santa Inés</h5>
                     <p class="card-text">Descuento del 12% para los socios en general, al precio del tarifario Santa Inés en laboratorio e imagen y servicios de clínica. Descuento del 15% para los socios Oro en laboratorio e imagen y servicios de clínica. Descuento del 10% en el servicio de farmacia.</p>
                 </div>
@@ -69,7 +70,7 @@
         <div class="col-md-4 mb-4">
             <div class="card shadow-sm h-100">
                 <div class="card-body text-center">
-                    <img src="{% static 'img/convenio_finetuned.png' %}" alt="Fine Tuned English" class="convenio-img">
+                    <img src="{% static 'img/fine-tuned-english.png' %}" alt="Fine Tuned English" class="convenio-img">
                     <h5 class="card-title mt-2">Fine Tuned English</h5>
                     <p class="card-text">Accede a grandes descuentos y beneficios, gracias a nuestro convenio con el Fine Tuned English. ¡Estudia inglés y abre la puerta a nuevas oportunidades!</p>
                 </div>
