--- a/camaracomercio/camara/template/master.html
+++ b/camaracomercio/camara/template/master.html
@@ -34,31 +34,60 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'home' %}">Inicio</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'convenios' %}">Convenios</a>
-                    </li>
                     {% if user.is_authenticated %}
-                        {# <li class="nav-item">
-                            <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
-                        </li> #}
+                        {% if user.is_superuser or user.is_staff %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'admin_convenios_list' %}">Convenios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'afiliaciones_pendientes' %}">Afiliaciones pendientes</a>
+                            </li>
+                        {% else %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'convenios' %}">Convenios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
+                            </li> 
+                        {% endif %}
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'convenios' %}">Convenios</a>
+                        </li>
                     {% endif %}
                 </ul>
                 
                 <ul class="navbar-nav">
-                    {% if user.is_authenticated and not user.is_superuser and not user.is_staff %}
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-                                <i class="fas fa-user me-1"></i>{{ user.first_name|default:user.username }}
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="{% url 'perfil_usuario' %}">Mi Perfil</a></li>
-                                <li><a class="dropdown-item" href="{% url 'historial_reservas' %}">Mis Reservas</a></li>
-                                <li><a class="dropdown-item" href="{% url 'notificaciones' %}">Notificaciones</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="{% url 'logout' %}">Cerrar Sesión</a></li>
-                            </ul>
-                        </li>
+                    {% if user.is_authenticated %}
+                        {% if user.is_superuser or user.is_staff %}
+                            <!-- Menú para admin/superuser -->
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAdmin" role="button" data-bs-toggle="dropdown">
+                                    <i class="fas fa-user-shield me-1"></i>{{ user.first_name|default:user.username }}
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="/admin/">Panel Admin</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="{% url 'logout' %}">Cerrar Sesión</a></li>
+                                </ul>
+                            </li>
+                        {% else %}
+                            <!-- Menú para usuarios normales -->
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
+                                    <i class="fas fa-user me-1"></i>{{ user.first_name|default:user.username }}
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="{% url 'perfil_usuario' %}">Mi Perfil</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'historial_reservas' %}">Mis Reservas</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'notificaciones' %}">Notificaciones</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="{% url 'logout' %}">Cerrar Sesión</a></li>
+                                </ul>
+                            </li>
+                        {% endif %}
                     {% else %}
+                        <!-- Menú para visitantes -->
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'login' %}">Iniciar Sesión</a>
                         </li>
