--- a/camaracomercio/camara/template/adminview/home.html
+++ b/camaracomercio/camara/template/adminview/home.html
@@ -4,9 +4,14 @@
 <div class="container mt-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2>Panel General de Administración</h2>
-        <a href="{% url 'afiliaciones_pendientes' %}" class="btn btn-primary">
-            <i class="fas fa-user-clock me-1"></i> Ver afiliaciones pendientes
-        </a>
+        <div>
+            <a href="{% url 'afiliaciones_pendientes' %}" class="btn btn-primary me-2">
+                <i class="fas fa-user-clock me-1"></i> Ver afiliaciones pendientes
+            </a>
+            <a href="{% url 'admin_servicios_list' %}" class="btn btn-success">
+                <i class="fas fa-cogs me-1"></i> Gestionar servicios
+            </a>
+        </div>
     </div>
     <div class="row mb-4">
         <div class="col-md-2 col-6 mb-3">
