--- a/camaracomercio/camara/template/master.html
+++ b/camaracomercio/camara/template/master.html
@@ -19,16 +19,14 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-custom sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container">
             <a class="navbar-brand" href="{% url 'home' %}">
                 <img src="{% static 'img/logo.png' %}" alt="Logo" class="logo-img me-2" style="height:32px;vertical-align:middle;">
             </a>
-            
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
@@ -42,6 +40,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'afiliaciones_pendientes' %}">Afiliaciones pendientes</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'admin_servicios_list' %}">Servicios</a>
+                            </li>
                         {% else %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'convenios' %}">Convenios</a>
@@ -49,6 +50,11 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
                             </li> 
+                            {% if user.tipo_usuario == 'socio' %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'servicios_publicos' %}">Servicios</a>
+                            </li>
+                            {% endif %}
                         {% endif %}
                     {% else %}
                         <li class="nav-item">
