--- a/camaracomercio/camara/template/master.html
+++ b/camaracomercio/camara/template/master.html
@@ -32,35 +32,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'home' %}">Inicio</a>
                     </li>
-                    {% if user.is_authenticated %}
-                        {% if user.is_superuser or user.is_staff %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'admin_convenios_list' %}">Convenios</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'afiliaciones_pendientes' %}">Afiliaciones pendientes</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'admin_servicios_list' %}">Servicios</a>
-                            </li>
-                        {% else %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'convenios' %}">Convenios</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
-                            </li> 
-                            {% if user.tipo_usuario == 'socio' %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'servicios_publicos' %}">Servicios</a>
-                            </li>
-                            {% endif %}
-                        {% endif %}
-                    {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'convenios' %}">Convenios</a>
-                        </li>
-                    {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'convenios' %}">Convenios</a>
+                    </li>
+                    <!-- Elimina la opción Dashboard -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'servicios_publicos' %}">Servicios</a>
+                    </li>
+                    <!-- ...otras opciones... -->
                 </ul>
                 
                 <ul class="navbar-nav">
