Manejo de login y cambio de contraseña automatico

--- a/camaracomercio/camara/template/vista_socio_registrado/home.html
+++ b/camaracomercio/camara/template/vista_socio_registrado/home.html
@@ -41,5 +41,14 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="dashboard-card mb-4">
+                <h3>Solicitar Seguro de Vida</h3>
+                <p>Completa el formulario para solicitar tu seguro de vida.</p>
+                <a href="{% url 'solicitar_seguro_vida' %}" class="btn btn-warning mt-2">Solicitar seguro de vida</a>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
