Manejo de login y cambio de contraseña automatico

--- a/camaracomercio/camara/template/vista_publica/convenios.html
+++ b/camaracomercio/camara/template/vista_publica/convenios.html
@@ -43,7 +43,7 @@
                         <strong>Beneficios:</strong>
                         <ul style="margin-top:8px;">
                             {% for beneficio in beneficios %}
-                            <li style="color:#28a745;">
+                            <li style="color:#40b45b;">
                                 {{ beneficio.descripcion }}
                             </li>
                             {% endfor %}
