--- a/camaracomercio/camara/template/vista_empresa/home.html
+++ b/camaracomercio/camara/template/vista_empresa/home.html
@@ -8,7 +8,7 @@
         <ul>
             <li>Accede a tu perfil de empresa.</li>
             <li>
-                <a class="nav-link" href="{% url 'registro' %}">Registro de empresa</a>
+                <a class="nav-link" href="{% url 'registroEmpresa' %}">Registro de empresa</a>
             </li>
             <li>Consulta servicios y convenios disponibles.</li>
         </ul>
